--- a/20160726-test_scores/index.html
+++ b/20160726-test_scores/index.html
@@ -25,19 +25,19 @@
       .map-overlay h2, .map-overlay p { margin: 0 0 10px; }
       .mapboxgl-ctrl-attrib { display:none; }
 
-      #wrapper { text-align:center; width:920px; margin-right:auto; margin-left:auto; }
+      #wrapper { text-align:center; width:100%; margin-right:auto; margin-left:auto; }
       #leftSide { width:30%; float:left; }
       #rightSide { width:68%; float:right; }
 
       #infobox { text-align:left; padding:30px; }
 
-      #schoolsList { height:480px; overflow-x:hidden; overflow-y:scroll; }
+      #schoolsList { height:377px; overflow-x:hidden; overflow-y:scroll; }
 
       .stat { font-weight:900; }
 
       #filter { padding:12px; }
 
-      #chart { height:250px; }
+      #chart { height:160px; }
 
       .source { font-size:0.8em; }
 
