--- a/20160726-test_scores/index.html
+++ b/20160726-test_scores/index.html
@@ -146,7 +146,9 @@
 </div>
 
 <div id="rightSide">
-    <div style="text-align:left; margin-top:10px" id="instructions">The above displays the percentage of schools in this district by how MCA proficiency rates, in reading and math, compare to what would be expected considering the schools’ poverty rates. Click on any of the percentages to see a list of schools that fall in this group. Select a district from above to filter which schools are listed and what the overall breakdowns are for the district. Selecte a school from the left to see its specific data.</div>
+    <div style="text-align:left; margin-top:10px" id="instructions"><p>Get Minnesota Comprehensive Assessment results for your school by first selecting a school district from the top menu. Then a list of schools in that district (not including special education or alternative learning schools) will appear below. Click on the name of the school to display proficiency rates for math and reading (all grades combined), including how that school’s proficiency rates compare to their expected rates. Expected rates were calculated, based on the school’s poverty rate, using a linear regression. Read more about this analysis.</p>
+
+    <p>The above displays the percentage of schools in this district by how MCA proficiency rates, in reading and math, compare to what would be expected considering the schools’ poverty rates. Click on any of the percentages to see a list of schools that fall in this group. Select a district from above to filter which schools are listed and what the overall breakdowns are for the district. Selecte a school from the left to see its specific data.</p></div>
 
     <div id="infobox" style="display:none;">
       <div id="schoolname">school name</div>
