--- a/20160726-test_scores/index.html
+++ b/20160726-test_scores/index.html
@@ -16,8 +16,10 @@
   <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v1.0.0/mapbox-gl-geocoder.css' type='text/css' />
   
   <style>
-      body, #filter, #filter input:focus { font-family:"Benton Sans",Helvetica,Arial,sans-serif; }
+      body, #filter, #filter input:focus, p { font-family:"Benton Sans",Helvetica,Arial,sans-serif; }
       #chart .c3-line { stroke-width:6px !important; }
+
+      p { text-align:left !important; }
 
       #map { width:100%; height:200px; }
       .map-overlay-container { position: absolute; width:400px; top: 0; left: 0; padding: 10px; z-index: 1; }
