--- a/20160726-test_scores/index.html
+++ b/20160726-test_scores/index.html
@@ -46,6 +46,8 @@
       .where { font-size:0.9em; }
       .bigPCT, .category { display:inline-block; width:48%; }
 
+      #instructions { color:#999; font-size:1.1em; top:100px; width:100%; z-index:1; margin-top:30%; text-align:center !important; }
+
       #filter input { border-radius:0 !important; width:100% !important; }
       #filter { padding:0px !important; }
       #filter2 input { border-radius:0 !important; width:100% !important; }
@@ -105,7 +107,9 @@
 <body>
   <div id="wrapper">
 
-<div id="districtSelect">Current district: <span id='thisDistrict'>All</span></div>
+<div id="districtSelect">Select a district: <span id='thisDistrict'>All</span></div>
+
+<div style="text-align:left;">Percentage of schools in selected district by how MCA proficiency rates compare to what would be expected based on poverty rates.</div>
 
 <ul id="listedSchools" class="dropdown months" tabindex="1">
 <div id="filter2"><input type="search" id="filter_box2" placeholder="Search by district name"></input></div>
@@ -148,9 +152,7 @@
 </div>
 
 <div id="rightSide">
-    <div style="text-align:left; margin-top:10px" id="instructions"><p>Get Minnesota Comprehensive Assessment results for your school by first selecting a school district from the top menu. Then a list of schools in that district (not including special education or alternative learning schools) will appear below. Click on the name of the school to display proficiency rates for math and reading (all grades combined), including how that school’s proficiency rates compare to their expected rates. Expected rates were calculated, based on the school’s poverty rate, using a linear regression. Read more about this analysis.</p>
-
-    <p>The above displays the percentage of schools in this district by how MCA proficiency rates, in reading and math, compare to what would be expected considering the schools’ poverty rates. Click on any of the percentages to see a list of schools that fall in this group. Select a district from above to filter which schools are listed and what the overall breakdowns are for the district. Selecte a school from the left to see its specific data.</p></div>
+    <div id="instructions"><p>&larr; Click on the name of the school to display proficient rates for math and reading (all grades combined).</p></div>
 
     <div id="infobox" style="display:none;">
       <div id="schoolname">school name</div>
