--- a/20160726-test_scores/index.html
+++ b/20160726-test_scores/index.html
@@ -205,7 +205,7 @@ d3.csv("./data/scores.csv", function(d) {
     predicted: +d.Predicted,
     residual: +d.Residual,
     category: d.CategoryName,
-    enrollment: d.k12enr
+    enrollment: d.K12Enr
   };
 }, function(error, rows) {
 
